--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "options_page": "options.html",
     "content_scripts": [
       {
-        "matches": ["https://gemini.google.com/*"],
+        "matches": ["<all_urls>"],
         "js": ["content.js"]
       }
     ],
